--- a/kontak.html
+++ b/kontak.html
@@ -22,8 +22,8 @@
   <section class="contact">
     <h2>Kontak Kami</h2>
     <p>Untuk pertanyaan atau pemesanan, hubungi kami melalui:</p>
-    <p><strong>WhatsApp:</strong> <a href="https://tinyurl.com/handi-ganteng" target="_blank">chat handi</a></p>
-    <p><strong>Email:</strong> <a href="mailto:theboyscuyy@gmail.com">cs@fikastore.id</a></p>
+    <p><strong>WhatsApp:</strong> <a href="https://wa.me/6285800650661" target="_blank">chat handi</a></p>
+    <p><strong>Email:</strong> <a href="mailto:fikastore.cs@gmail.com">cs@fikastore.id</a></p>
     <p><strong>Instagram:</strong> <a href="https://www.instagram.com/fikastore" target="_blank">@fikastore</a></p>
     <p><strong>Jam Operasional:</strong> Setiap Hari, 08.00 - 22.00 WIB</p>
   </section>
