--- a/dev.html
+++ b/dev.html
@@ -175,8 +175,8 @@
       jasa perbaikan script bot, hingga nomor kosong untuk verifikasi akun. Kami hadir untuk memberikan solusi digital terpercaya
       dengan harga terbaik dan pelayanan cepat.</p>
     <ul>
-      <li><strong>WhatsApp:</strong> https://wa.me/6287717274246</li>
-      <li><strong>Email:</strong> theboyscuyy@gmail.com</li>
+      <li><strong>WhatsApp:</strong> https://wa.me/6285800650661</li>
+      <li><strong>Email:</strong> fikastore.cs@gmail.com</li>
       <li><strong>Instagram:</strong> @fikastore</li>
       <li><strong>Jam Operasional:</strong> Setiap Hari, 08.00 - 22.00 WIB</li>
     </ul>
